# protobuf-tutorial

./: CMakeLists.txt  README.md  addressbook.proto  google_read.cpp  read.cpp  write.cpp
address-cpp/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h
address-py/: addressbook_pb2.py
